--- a/BlazorSwitchableApp/BlazorServerApp/_Imports.razor
+++ b/BlazorSwitchableApp/BlazorServerApp/_Imports.razor
@@ -7,4 +7,4 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using BlazorServerApp
-@using BlazorServerApp.Shared
+@using BlazorApp.Shared
