Split Blazor UI into its own project

--- a/BlazorMauiApp/BlazorApp/Pages/FetchData.razor
+++ b/BlazorMauiApp/BlazorApp/Pages/FetchData.razor
@@ -1,6 +1,6 @@
 ﻿@page "/fetchdata"
 
-@using BlazorMauiApp.Data
+@using BlazorApp.Data
 @inject WeatherForecastService ForecastService
 
 <h1>Weather forecast</h1>
