--- a/BlazorMauiApp/BlazorMauiApp/MainPage.xaml
+++ b/BlazorMauiApp/BlazorMauiApp/MainPage.xaml
@@ -2,13 +2,14 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:BlazorMauiApp"
+             xmlns:blazorapp="clr-namespace:BlazorApp;assembly=BlazorApp"
              x:Class="BlazorMauiApp.MainPage"
              BackgroundColor="{DynamicResource PageBackgroundColor}">
 
-    <BlazorWebView HostPage="wwwroot/index.html">
-        <BlazorWebView.RootComponents>
-            <RootComponent Selector="#app" ComponentType="{x:Type local:Main}" />
-        </BlazorWebView.RootComponents>
-    </BlazorWebView>
+  <BlazorWebView HostPage="wwwroot/index.html">
+    <BlazorWebView.RootComponents>
+      <RootComponent Selector="#app" ComponentType="{x:Type blazorapp:Main}" />
+    </BlazorWebView.RootComponents>
+  </BlazorWebView>
 
 </ContentPage>
