--- a/BlazorClientAuthentication/BlazorClientAuthentication/Components/Pages/Counter.razor
+++ b/BlazorClientAuthentication/BlazorClientAuthentication/Components/Pages/Counter.razor
@@ -1,4 +1,5 @@
 ﻿@page "/counter"
+@using Microsoft.AspNetCore.Components.Authorization
 
 <PageTitle>Counter</PageTitle>
 
@@ -6,7 +7,14 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<AuthorizeView Roles="admin">
+    <Authorized>
+        <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+    </Authorized>
+    <NotAuthorized>
+        Nah nah nah!
+    </NotAuthorized>
+</AuthorizeView>
 
 @code {
     private int currentCount = 0;
