--- a/PageLifecycle/PageLifecycle/Shared/MyComponent.razor
+++ b/PageLifecycle/PageLifecycle/Shared/MyComponent.razor
@@ -18,9 +18,9 @@
   {
     rendered = false;
     logger.Log("-----------");
-    logger.Log("Initialized+");
+    logger.Log("OnInitialized+");
     base.OnInitialized();
-    logger.Log("Initialized-");
+    logger.Log("OnInitialized-");
   }
 
   protected override void OnParametersSet()
