Fix page title text

--- a/BlazorServerAuthentication/BlazorServerAuthentication/BlazorServerAuthentication/Components/Pages/Login.razor
+++ b/BlazorServerAuthentication/BlazorServerAuthentication/BlazorServerAuthentication/Components/Pages/Login.razor
@@ -5,7 +5,7 @@
 @inject IHttpContextAccessor httpContextAccessor
 @inject NavigationManager NavigationManager
 
-<PageTitle>Project Tracker - Login</PageTitle>
+<PageTitle>Login</PageTitle>
 
 <h1>Login</h1>
 
